fixing layout problem when scrolling down

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,8 +11,6 @@ body {
 }
 
 section {
-    min-height: 100dvh;
+    min-height: 100svh;
     padding-top: 100px;
-
-
 }
